# Delivery-system

./: .env.example  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml
.claude/: settings.local.json
crates/api/: Cargo.toml
crates/api/src/: app_state.rs  config.rs  errors.rs  extractors.rs  main.rs  openapi.rs  response.rs  router.rs
crates/api/src/handlers/: dispatch.rs  driver.rs  health.rs  location.rs  mod.rs  order.rs  shop.rs
crates/api/src/middleware/: auth.rs  rate_limit.rs
crates/api/src/workers/: batch_scheduler.rs  instant_dispatch.rs  location_cleanup.rs  mod.rs  stale_order_checker.rs  webhook_dispatcher.rs
crates/application/: Cargo.toml
crates/application/src/dto/: mod.rs
crates/application/src/services/: batch_service.rs  dispatch_service.rs  driver_service.rs  location_service.rs  mod.rs  order_service.rs  shop_service.rs  webhook_service.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs
crates/domain/src/entities/: batch.rs  dispatch_offer.rs  driver.rs  mod.rs  order.rs  shop.rs  webhook.rs
crates/domain/src/ports/: external.rs  geospatial.rs  mod.rs  repository.rs
crates/domain/src/value_objects/: distance.rs  location.rs  mod.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/auth/: api_key.rs  jwt.rs  mod.rs
crates/infrastructure/src/geospatial/: mod.rs  postgis_engine.rs
crates/infrastructure/src/persistence/: mod.rs  models.rs  pg_batch_repo.rs  pg_dispatch_offer_repo.rs  pg_driver_repo.rs  pg_location_repo.rs  pg_order_repo.rs  pg_shop_repo.rs  pg_webhook_outbox_repo.rs
migrations/: 002_create_shops.sql  003_create_drivers.sql  004_create_driver_locations.sql  005_create_orders.sql  006_create_batch_tables.sql  007_create_webhook_outbox.sql  008_create_dispatch_offers.sql
tests/: batch_clustering_test.rs  dispatch_test.rs  location_ingestion_test.rs  order_flow_test.rs  webhook_test.rs
tests/common/: mod.rs
