[package]
name = "delivery-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
delivery-domain = { path = "../domain" }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
